src/scss/styles.scss
/* ... */
.callout {
    padding: $alert-padding-y $alert-padding-x;
    margin-bottom: $alert-margin-bottom;
    border: 1px solid $card-border-color;
    border-left-width: 5px;
    border-radius: $card-inner-border-radius;
    background-color: #fafafa;

    .callout-heading {
        margin-top: 0;
    }

    h3.callout-heading {
        font-weight: bold;
        text-transform: uppercase;
    }

    &.callout-primary {
        border-left-color: $primary;

        .callout-heading {
            color: $primary;
        }
    }

    &.callout-info {
        border-left-color: $gray-800;

        .callout-heading {
            color: $gray-800;
        }
    }

    &.callout-danger {
        border-left-color: $danger;

        .callout-heading {
            color: $danger;
        }
    }

    &.callout-success {
        border-left-color: $success;

        .callout-heading {
            color: $success;
        }
    }

    &.callout-warning {
        border-left-color: $warning;

        .callout-heading {
            color: $warning;
        }
    }
}

.list-group-2fa {
    .logo-2fa {
        min-width: 100px;
    }
}

.form-check-block {
    .form-check-label {
        font-weight: 600;

        > small {
            display: block;
            color: $text-muted;
            font-weight: normal;
        }

        > span {
            display: block;
            font-weight: normal;
            @extend .mt-2;
        }
    }
}

.form-check-block + .form-check-block {
    &:not(.mt-2) {
        @extend .mt-3;
    }
}

.form-inline {
    input[type='datetime-local'] {
        width: 200px;
    }
}

.form-control.stripe-form-control {
    padding-top: 0.55rem;

    &.is-focused {
        color: $input-focus-color;
        background-color: $input-focus-bg;
        border-color: $input-focus-border-color;
        outline: 0;
        box-shadow: $input-focus-box-shadow;
    
        &.is-invalid {
            box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-invalid-color, .25);
        }
    }
    
    &.is-invalid {
        border-color: $form-feedback-invalid-color;
    }
}

.org-nav {
    background-color: $input-bg;
    border-bottom: 1px solid $border-color;
    height: 100px;
    min-height: 100px;

    .container {
        height: 100%;
    }

    .nav-tabs {
        border-bottom: none;

        a {
            color: $body-color;

            &:not(.active) {
                border-color: transparent;
            }

            &.active {
                border-top: 3px solid theme-color("primary");
                font-weight: bold;
                padding-top: calc(#{$nav-link-padding-y} - 2px);
            }

            &.disabled {
                color: $input-placeholder-color;
            }
        }
    }

    .org-name {
        line-height: 1;
        span {
            font-size: $font-size-lg;
            display: block;
        }
    }
}

img.logo {
    width: 284px;
    height: 43px;
    margin: 0 auto;
    display: block;
}

.min-height-fix {
    min-height: 1px;
}

.overflow-hidden {
    overflow: hidden;
}

.cdk-drag-preview {
    z-index: $zindex-tooltip !important;
    opacity: 0.8;
    background-color: $white;
    border-radius: $border-radius;
}

.cursor-move {
    cursor: move !important;
}

